src/main/java/io/github/ghostbuster91/ethereum/sha3/parser/SolidityParser.java
// Generated from /home/kghost0/workspace/ethereum-sha/src/main/antlr/Solidity.g4 by ANTLR 4.2.2
package io.github.ghostbuster91.ethereum.sha3.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SolidityParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__86=1, T__85=2, T__84=3, T__83=4, T__82=5, T__81=6, T__80=7, T__79=8, 
		T__78=9, T__77=10, T__76=11, T__75=12, T__74=13, T__73=14, T__72=15, T__71=16, 
		T__70=17, T__69=18, T__68=19, T__67=20, T__66=21, T__65=22, T__64=23, 
		T__63=24, T__62=25, T__61=26, T__60=27, T__59=28, T__58=29, T__57=30, 
		T__56=31, T__55=32, T__54=33, T__53=34, T__52=35, T__51=36, T__50=37, 
		T__49=38, T__48=39, T__47=40, T__46=41, T__45=42, T__44=43, T__43=44, 
		T__42=45, T__41=46, T__40=47, T__39=48, T__38=49, T__37=50, T__36=51, 
		T__35=52, T__34=53, T__33=54, T__32=55, T__31=56, T__30=57, T__29=58, 
		T__28=59, T__27=60, T__26=61, T__25=62, T__24=63, T__23=64, T__22=65, 
		T__21=66, T__20=67, T__19=68, T__18=69, T__17=70, T__16=71, T__15=72, 
		T__14=73, T__13=74, T__12=75, T__11=76, T__10=77, T__9=78, T__8=79, T__7=80, 
		T__6=81, T__5=82, T__4=83, T__3=84, T__2=85, T__1=86, T__0=87, Int=88, 
		Uint=89, Byte=90, Fixed=91, Ufixed=92, VersionLiteral=93, BooleanLiteral=94, 
		DecimalNumber=95, HexNumber=96, NumberUnit=97, HexLiteral=98, ReservedKeyword=99, 
		AnonymousKeyword=100, BreakKeyword=101, ConstantKeyword=102, ContinueKeyword=103, 
		ExternalKeyword=104, IndexedKeyword=105, InternalKeyword=106, PayableKeyword=107, 
		PrivateKeyword=108, PublicKeyword=109, PureKeyword=110, ViewKeyword=111, 
		Identifier=112, StringLiteral=113, WS=114, COMMENT=115, LINE_COMMENT=116;
	public static final String[] tokenNames = {
		"<INVALID>", "'default'", "'+='", "'%='", "'library'", "'interface'", 
		"'new'", "'storage'", "'!='", "'while'", "'{'", "'pragma'", "'^='", "'&&'", 
		"'>>'", "'**'", "'byte'", "'='", "'<<='", "'for'", "'^'", "'delete'", 
		"'|='", "'do'", "'('", "'-='", "','", "'/='", "'after'", "'memory'", "'var'", 
		"'>='", "'++'", "'<'", "']'", "'~'", "'let'", "'returns'", "'function'", 
		"'+'", "'mapping'", "'struct'", "'*='", "'/'", "'as'", "'&='", "'return'", 
		"'using'", "'>>='", "'||'", "';'", "'<<'", "'=:'", "'}'", "'if'", "':='", 
		"'?'", "'enum'", "'event'", "'<='", "'from'", "'&'", "'switch'", "'is'", 
		"'*'", "'.'", "'->'", "'case'", "'throw'", "':'", "'['", "'contract'", 
		"'=='", "'|'", "'--'", "'address'", "'bool'", "'>'", "'!'", "'=>'", "'string'", 
		"'%'", "'modifier'", "'else'", "')'", "'assembly'", "'-'", "'import'", 
		"Int", "Uint", "Byte", "Fixed", "Ufixed", "VersionLiteral", "BooleanLiteral", 
		"DecimalNumber", "HexNumber", "NumberUnit", "HexLiteral", "ReservedKeyword", 
		"'anonymous'", "'break'", "'constant'", "'continue'", "'external'", "'indexed'", 
		"'internal'", "'payable'", "'private'", "'public'", "'pure'", "'view'", 
		"Identifier", "StringLiteral", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static final int
		RULE_sourceUnit = 0, RULE_pragmaDirective = 1, RULE_pragmaName = 2, RULE_pragmaValue = 3, 
		RULE_version = 4, RULE_versionOperator = 5, RULE_versionConstraint = 6, 
		RULE_importDeclaration = 7, RULE_importDirective = 8, RULE_contractDefinition = 9, 
		RULE_inheritanceSpecifier = 10, RULE_contractPart = 11, RULE_stateVariableDeclaration = 12, 
		RULE_usingForDeclaration = 13, RULE_structDefinition = 14, RULE_modifierDefinition = 15, 
		RULE_modifierInvocation = 16, RULE_functionDefinition = 17, RULE_returnParameters = 18, 
		RULE_modifierList = 19, RULE_eventDefinition = 20, RULE_enumValue = 21, 
		RULE_enumDefinition = 22, RULE_parameterList = 23, RULE_parameter = 24, 
		RULE_eventParameterList = 25, RULE_eventParameter = 26, RULE_functionTypeParameterList = 27, 
		RULE_functionTypeParameter = 28, RULE_variableDeclaration = 29, RULE_typeName = 30, 
		RULE_userDefinedTypeName = 31, RULE_mapping = 32, RULE_functionTypeName = 33, 
		RULE_storageLocation = 34, RULE_stateMutability = 35, RULE_block = 36, 
		RULE_statement = 37, RULE_expressionStatement = 38, RULE_ifStatement = 39, 
		RULE_whileStatement = 40, RULE_simpleStatement = 41, RULE_forStatement = 42, 
		RULE_inlineAssemblyStatement = 43, RULE_doWhileStatement = 44, RULE_continueStatement = 45, 
		RULE_breakStatement = 46, RULE_returnStatement = 47, RULE_throwStatement = 48, 
		RULE_variableDeclarationStatement = 49, RULE_identifierList = 50, RULE_elementaryTypeName = 51, 
		RULE_expression = 52, RULE_primaryExpression = 53, RULE_expressionList = 54, 
		RULE_nameValueList = 55, RULE_nameValue = 56, RULE_functionCallArguments = 57, 
		RULE_assemblyBlock = 58, RULE_assemblyItem = 59, RULE_assemblyExpression = 60, 
		RULE_assemblyCall = 61, RULE_assemblyLocalDefinition = 62, RULE_assemblyAssignment = 63, 
		RULE_assemblyIdentifierOrList = 64, RULE_assemblyIdentifierList = 65, 
		RULE_assemblyStackAssignment = 66, RULE_labelDefinition = 67, RULE_assemblySwitch = 68, 
		RULE_assemblyCase = 69, RULE_assemblyFunctionDefinition = 70, RULE_assemblyFunctionReturns = 71, 
		RULE_assemblyFor = 72, RULE_assemblyIf = 73, RULE_assemblyLiteral = 74, 
		RULE_subAssembly = 75, RULE_tupleExpression = 76, RULE_elementaryTypeNameExpression = 77, 
		RULE_numberLiteral = 78, RULE_identifier = 79;
	public static final String[] ruleNames = {
		"sourceUnit", "pragmaDirective", "pragmaName", "pragmaValue", "version", 
		"versionOperator", "versionConstraint", "importDeclaration", "importDirective", 
		"contractDefinition", "inheritanceSpecifier", "contractPart", "stateVariableDeclaration", 
		"usingForDeclaration", "structDefinition", "modifierDefinition", "modifierInvocation", 
		"functionDefinition", "returnParameters", "modifierList", "eventDefinition", 
		"enumValue", "enumDefinition", "parameterList", "parameter", "eventParameterList", 
		"eventParameter", "functionTypeParameterList", "functionTypeParameter", 
		"variableDeclaration", "typeName", "userDefinedTypeName", "mapping", "functionTypeName", 
		"storageLocation", "stateMutability", "block", "statement", "expressionStatement", 
		"ifStatement", "whileStatement", "simpleStatement", "forStatement", "inlineAssemblyStatement", 
		"doWhileStatement", "continueStatement", "breakStatement", "returnStatement", 
		"throwStatement", "variableDeclarationStatement", "identifierList", "elementaryTypeName", 
		"expression", "primaryExpression", "expressionList", "nameValueList", 
		"nameValue", "functionCallArguments", "assemblyBlock", "assemblyItem", 
		"assemblyExpression", "assemblyCall", "assemblyLocalDefinition", "assemblyAssignment", 
		"assemblyIdentifierOrList", "assemblyIdentifierList", "assemblyStackAssignment", 
		"labelDefinition", "assemblySwitch", "assemblyCase", "assemblyFunctionDefinition", 
		"assemblyFunctionReturns", "assemblyFor", "assemblyIf", "assemblyLiteral", 
		"subAssembly", "tupleExpression", "elementaryTypeNameExpression", "numberLiteral", 
		"identifier"
	};

	@Override
	public String getGrammarFileName() { return "Solidity.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SolidityParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SourceUnitContext extends ParserRuleContext {
		public ContractDefinitionContext contractDefinition(int i) {
			return getRuleContext(ContractDefinitionContext.class,i);
		}
		public TerminalNode EOF() { return getToken(SolidityParser.EOF, 0); }
		public PragmaDirectiveContext pragmaDirective(int i) {
			return getRuleContext(PragmaDirectiveContext.class,i);
		}
		public ImportDirectiveContext importDirective(int i) {
			return getRuleContext(ImportDirectiveContext.class,i);
		}
		public List<ContractDefinitionContext> contractDefinition() {
			return getRuleContexts(ContractDefinitionContext.class);
		}
		public List<ImportDirectiveContext> importDirective() {
			return getRuleContexts(ImportDirectiveContext.class);
		}
		public List<PragmaDirectiveContext> pragmaDirective() {
			return getRuleContexts(PragmaDirectiveContext.class);
		}
		public SourceUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sourceUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SolidityListener ) ((SolidityListener)listener).enterSourceUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SolidityListener ) ((SolidityListener)listener).exitSourceUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SolidityVisitor ) return ((SolidityVisitor<? extends T>)visitor).visitSourceUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceUnitContext sourceUnit() throws RecognitionException {
		SourceUnitContext _localctx = new SourceUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sourceUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 4) | (1L << 5) | (1L << 11))) != 0) || _la==71 || _la==87) {
				{
				setState(163);
				switch (_input.LA(1)) {
				case 11:
					{
					setState(160); pragmaDirective();
					}
					break;
				case 87:
					{
					setState(161); importDirective();
					}
					break;
				case 4:
				case 5:
				case 71:
					{
					setState(162); contractDefinition();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(168); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PragmaDirectiveContext extends ParserRuleContext {
		public PragmaNameContext pragmaName() {
			return getRuleContext(PragmaNameContext.class,0);
		}
		public PragmaValueContext pragmaValue() {
			return getRuleContext(PragmaValueContext.class,0);
		}
		public PragmaDirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pragmaDirective; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SolidityListener ) ((SolidityListener)listener).enterPragmaDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SolidityListener ) ((SolidityListener)listener).exitPragmaDirective(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SolidityVisitor ) return ((SolidityVisitor<? extends T>)visitor).visitPragmaDirective(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PragmaDirectiveContext pragmaDirective() throws RecognitionException {
		PragmaDirectiveContext _localctx = new PragmaDirectiveContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pragmaDirective);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170); match(11);
			setState(171); pragmaName();
			setState(172); pragmaValue();
			setState(173); match(50);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PragmaNameContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public PragmaNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pragmaName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SolidityListener ) ((SolidityListener)listener).enterPragmaName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SolidityListener ) ((SolidityListener)listener).exitPragmaName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SolidityVisitor ) return ((SolidityVisitor<? extends T>)visitor).visitPragmaName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PragmaNameContext pragmaName() throws RecognitionException {
		PragmaNameContext _localctx = new PragmaNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_pragmaName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175); identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PragmaValueContext extends ParserRuleContext {
		public VersionContext version() {
			return getRuleContext(VersionContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PragmaValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pragmaValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SolidityListener ) ((SolidityListener)listener).enterPragmaValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SolidityListener ) ((SolidityListener)listener).exitPragmaValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SolidityVisitor ) return ((SolidityVisitor<? extends T>)visitor).visitPragmaValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PragmaValueContext pragmaValue() throws RecognitionException {
		PragmaValueContext _localctx = new PragmaValueContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pragmaValue);
		try {
			setState(179);
			switch (_input.LA(1)) {
			case 20:
			case 31:
			case 33:
			case 59:
			case 77:
			case VersionLiteral:
				enterOuterAlt(_localctx, 1);
				{
				setState(177); version();
				}
				break;
			case 6:
			case 16:
			case 21:
			case 24:
			case 28:
			case 30:
			case 32:
			case 35:
			case 39:
			case 60:
			case 70:
			case 74:
			case 75:
			case 76:
			case 78:
			case 80:
			case 86:
			case Int:
			case Uint:
			case Byte:
			case Fixed:
			case Ufixed:
			case BooleanLiteral:
			case DecimalNumber:
			case HexNumber:
			case HexLiteral:
			case Identifier:
			case StringLiteral:
				enterOuterAlt(_localctx, 2);
				{
				setState(178); expression(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VersionContext extends ParserRuleContext {
		public List<VersionConstraintContext> versionConstraint() {
			return getRuleContexts(VersionConstraintContext.class);
		}
		public VersionConstraintContext versionConstraint(int i) {
			return getRuleContext(VersionConstraintContext.class,i);
		}
		public VersionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_version; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SolidityListener ) ((SolidityListener)listener).enterVersion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SolidityListener ) ((SolidityListener)listener).exitVersion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SolidityVisitor ) return ((SolidityVisitor<? extends T>)visitor).visitVersion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VersionContext version() throws RecognitionException {
		VersionContext _localctx = new VersionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_version);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181); versionConstraint();
			setState(183);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 20) | (1L << 31) | (1L << 33) | (1L << 59))) != 0) || _la==77 || _la==VersionLiteral) {
				{
				setState(182); versionConstraint();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VersionOperatorContext extends ParserRuleContext {
		public VersionOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_versionOperator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SolidityListener ) ((SolidityListener)listener).enterVersionOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SolidityListener ) ((SolidityListener)listener).exitVersionOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SolidityVisitor ) return ((SolidityVisitor<? extends T>)visitor).visitVersionOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VersionOperatorContext versionOperator() throws RecognitionException {
		VersionOperatorContext _localctx = new VersionOperatorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_versionOperator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			_la = _input.LA(1);
			if ( !(((((_la - 20)) & ~0x3f) == 0 && ((1L << (_la - 20)) & ((1L << (20 - 20)) | (1L << (31 - 20)) | (1L << (33 - 20)) | (1L << (59 - 20)) | (1L << (77 - 20)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
